delete some pictures and add exp description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <!-- navigation -->
         <nav>
             <ul class="menu menu-show"> 
                 <li><a href="#home" class="active">Home</a></li>
@@ -28,6 +29,7 @@
             
         </nav>
 
+        <!-- home section -->
         <section id="home">
             <div class="content-wrapper">
                 <p class="greeting"><a href="#about">Hello!</a></p>
@@ -36,6 +38,7 @@
             </div>
         </section>
 
+        <!-- about section -->
         <section id="about">
             <div class="container">
                 <h1 class="welcome">Welcome to my Portfolio!</h1>
@@ -43,6 +46,7 @@
             </div>
         </section>
 
+        <!-- experience section -->
         <section id="experience">
             <div class="experience-grid">
                 <div class="left-column">
@@ -59,12 +63,12 @@
                             <p>July,2024 - September,2024</p>
                         </div>
                         <div class="experience-box">
-                            <h2>Staff of Mentor Division Kadwil STEI-K</h2>
-                            <p>Description of Experience 3</p>
-                        </div>
-                        <div class="experience-box">
                             <h2>Staff of Tech IIT HMIF</h2>
                             <p>June,2024 - Now</p>
+                        </div>
+                        <div class="experience-box">
+                            <h2>Staff of Mentor Division Kadwil STEI-K</h2>
+                            <p>May,2024 - June,2024</p>
                         </div>
                         <div class="experience-box">
                             <h2>Vice Chair of Licensing Division Akademi Skhole</h2>
@@ -75,6 +79,7 @@
             </div>
         </section>
 
+        <!-- project section -->
         <section id="project">
             <h1>Recent Projects</h1>
             <div class="project-grid">
@@ -117,6 +122,7 @@
             </div>
         </section>
 
+        <!-- resume section -->
         <section id="resume">
             <div class="resume-wrapper">
                 <h1>Resume</h1>
@@ -124,27 +130,29 @@
             </div>
         </section>
 
+        <!-- contact section -->
         <section id="contact">
             <h1 class="Connect">Get To Know More About Me</h1>
             <div class="social-media-container">
-                <a href="https://www.youtube.com">
+                <a href="https://www.youtube.com/@shabrinamaharani1615">
                     <img src="images/youtube.png" alt="YouTube Icon">
                 </a>
-                <a href="https://www.linkedin.com">
+                <a href="https://www.linkedin.com/in/shabrina-maharani-123456789/">
                     <img src="images/linkedin.png" alt="LinkedIn Icon">
                 </a>
-                <a href="https://www.discord.com">
+                <a href="discordapp.com/users/750538292134674514">
                     <img src="images/discord.png" alt="Discord Icon">
                 </a>
-                <a href="https://www.facebook.com">
+                <a href="https://www.github.com/Maharanish">
                     <img src="images/github.png" alt="Github Icon">
                 </a>
-                <a href="https://www.instagram.com">
+                <a href="https://www.instagram.com/maharanishhh">
                     <img src="images/instagram.png" alt="Instagram Icon">
                 </a>
             </div>
         </section>
 
+        <!-- footer section -->
         <footer>
             &copy; 2024 by Shabrina Maharani - 13522134
         </footer>
